clusters/base/apps/gateway-component/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: APPNAME-gateway
  namespace: aks-istio-ingress
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: REPLACE_DNS_LABEL
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /healthz
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "REPLACE_GATEWAY_HOSTNAME"
      tls:
        mode: Terminate
        certificateRefs:
          - name: APPNAME-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
